# TPA-Data-Processor

./: .gitignore  CHANGELOG.md  README.md  helpful_commands.sh  pyproject.toml
airflow/Airflow_DAGs_Provisioning/: airflow_data_processing.py
airflow/Airflow_config/: Airflow_Steps.sh  docker-compose.yaml  update_files.sh
src/tpa_data_processor/: Loader.py
src/tpa_data_processor/utils/: date_helpers.py  download.py  map_class.py  upload.py
test/: conftest.py  prod_config.yaml  test_DailyLoader.py  test_DailyWideLoader.py  test_WeeklyLoader.py  test_config.yaml
